white space on btn class fix

--- a/css/style.css
+++ b/css/style.css
@@ -189,6 +189,7 @@ nav {
     text-decoration: none;
     font-size: 1.5rem;
     border-radius: 3px;
+    white-space: normal;
 }
 
 .btn:hover {
